--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@babel/plugin-syntax-decorators": "^7.19.0",
     "@loadable/component": "^5.15.2",
     "antd": "^5.0.0",
