--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^3.4.0",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-config": "^5.1.1",
@@ -29,6 +30,7 @@
     "@babel/plugin-proposal-decorators": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@types/loadable__component": "^5.13.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/react-router-config": "^5.0.6",
